| Bug #796 | memory leak in group_concat | ||
|---|---|---|---|
| Submitted: | 6 Jul 2003 7:35 | Modified: | 6 Jul 2003 12:36 |
| Reporter: | Oleksandr Byelkin | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S3 (Non-critical) |
| Version: | 4.1 | OS: | Any (any) |
| Assigned to: | Oleksandr Byelkin | CPU Architecture: | Any |
[6 Jul 2003 7:35]
Oleksandr Byelkin
[6 Jul 2003 8:13]
Oleksandr Byelkin
ChangeSet 1.1568 03/07/06 18:11:19 bell@sanja.is.com.ua +3 -0 fixed memory leak in group_concat function (BUG#796) fixed test func_gconcat to be repeatable independent of presend tables and avoid removing user tables
