fixed memory leak in group_concat function (BUG#796) fixed test func_gconcat to be repeatable independent of presend tables and avoid removing user tables